# Sam2-Auto-Annotation

./: .gitignore  README.md  create_env.py  main.py  requirements.txt  rl_su.py  sb3_test.py
catkin_ws/src/detect_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/detect_pkg/scripts/: KCF.py  PyCUDADetector.py  drone_tracker.py  gen_video.py  one_euro.py  ori_debug.py  rs_camera.py  tracker_manager.py  vio.py  visfly_node.py
catkin_ws/src/detect_pkg/src/detrack/: CMakeLists.txt  detrack_node.cpp  package.xml
catkin_ws/src/detect_pkg/src/detrack/bytetrack/: CMakeLists.txt
catkin_ws/src/detect_pkg/src/ekf/: CMakeLists.txt  ekf_node.cpp  package.xml
catkin_ws/src/detect_pkg/src/ekf/include/: ekf_node.h
catkin_ws/src/launch/: detect.launch  vicon_detect.launch
scripts/: CUDADetector.py  PyCUDADetector.py  bootstrap.py  check_dataset.py  d435_cuda_onboard_ut.py  d435i_on_board_capture.py  extract_mask.py  gen_label.py  percolate.py  pic_cap.py  predict.py  pt2onnx.py  realsense.py  sam_auto_annotation.py  sample.py  sample_depth.py  temp_draw_depth.py  train.py  validate.py  viewer.py
video_data/drone_indoor_back/: prompt.yaml
video_data/drone_indoor_front/: prompt.yaml
video_data/drone_indoor_test01/: prompt.yaml
video_data/drone_outdoor_2/: prompt.yaml
video_data/drone_outdoor_fast01/: prompt.yaml
video_data/drone_outdoor_slow01/: prompt.yaml
